--- a/themes/demo/layouts/home.htm
+++ b/themes/demo/layouts/home.htm
@@ -29,11 +29,13 @@ description = "Default layout"
                         {% partial 'site/nav-links' %}
                     </ul>
                 </div>
+                <div class=" ">
+                    {% livewire 'counter' count=2 %}
+                </div>
             </div>
         </nav>
 
         {% partial 'site/flash-messages' %}
-
         <!-- Content -->
         <section id="layout-content">
             {% page %}
